# negotians

./: .gitignore  .gitmodules  .travis.yml  Jenkinsfile  README.md  Setup.hs  forvaret.cabal  install_protoc_from_source.sh  negotians.cabal  stack.yaml
app/: Main.hs
k8s/dev/: negotians-dev.yml
k8s/production/: negotians-production.yml
k8s/services/: negotians.yml
proto-src/: EventLog.proto  InnerLogRep.proto
src/: App.hs  Internal.hs  Output.hs  WebApp.hs
src/Data/: Event.hs  Internal.hs
src/Output/: AMQP.hs  GooglePubSub.hs  RMQ.hs
test/: Spec.hs
