name:                forvaret
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/forvaret#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  other-modules:       Data.Internal
  exposed-modules:     App
  build-depends:       aeson >= 0.11,
                       base >= 4.7 && < 5,
                       bytestring >= 0.10,
                       digest >= 0.0,
                       http-types >= 0.9,
                       scientific >= 0.3,
                       text >= 1.2,
                       unordered-containers >= 0.2,
                       wai >= 3.2
  default-language:    Haskell2010

executable forvaret-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , forvaret
                     , wai >= 3.2
                     , warp >= 3.2
  default-language:    Haskell2010

test-suite forvaret-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , forvaret
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/forvaret
