name:                negotians
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/negotians#readme
license:             BSD3
license-file:        LICENSE
author:              Danil
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Custom
extra-source-files:  proto-src/EventLog.proto
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  other-modules:       Proto.EventLog
                     , Internal
  exposed-modules:     App
  build-depends:       aeson >= 0.11,
                       base >= 4.7 && < 5,
                       bytestring >= 0.10,
                       case-insensitive >= 1.2,
                       cryptonite,
                       http-types >= 0.9,
                       katip >= 0.3,
                       proto-lens-protoc,
                       string-conv >= 0.1,
                       text,
                       wai >= 3.2,
                       wai-logger >= 2.3
  default-language:    Haskell2010

executable negotians-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , negotians
                     , wai >= 3.2
                     , warp >= 3.2
                     , katip >= 0.3
  default-language:    Haskell2010

test-suite negotians-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , hspec-wai
                     , negotians
                     , warp
                     , katip
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/negotians
