name:                negotians
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/negotians#readme
license:             BSD3
license-file:        LICENSE
author:              Danil
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Custom
extra-source-files:  proto-src/*.proto
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Proto.EventLog
                     , Proto.InnerLogRep
                     , Output.AMQP
                     , App
                     , Internal
                     , Output
                     , Output.GooglePubSub
  build-depends:       aeson >= 0.11,
                       amqp,
                       base >= 4.7 && < 5,
                       binary >= 0.8,
                       bytestring >= 0.10,
                       case-insensitive >= 1.2,
                       cryptonite,
                       exceptions >= 0.8,
                       gogol >= 0.1,
                       gogol-pubsub >= 0.1,
                       http-types >= 0.9,
                       lens >= 4.14,
                       lens-family >= 1.2,
                       memory >= 0.13,
                       mtl,
                       proto-lens,
                       proto-lens-protoc,
                       retry >= 0.7,
                       stm >= 2.4,
                       string-conv >= 0.1,
                       text,
                       text >= 1.2,
                       time >= 1.6,
                       transformers >= 0.5,
                       wai >= 3.2
  default-language:    Haskell2010

executable negotians-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , data-default
                     , negotians
                     , optparse-generic >= 1.1
                     , text >= 1.2
                     , wai >= 3.2
                     , wai-extra >= 3.0
                     , warp >= 3.2
  default-language:    Haskell2010

test-suite negotians-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , binary >= 0.8
                     , bytestring
                     , cryptonite >= 0.19
                     , hspec
                     , hspec-wai
                     , lens-family >= 1.2
                     , negotians
                     , proto-lens >= 0.1
                     , proto-lens-protoc >= 0.1
                     , proto-lens-arbitrary
                     , warp
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/negotians
